Refactor fast XPath implementation for descendants to sequences.